--- a/RanchRodeo/RRRiderTableViewCell.xib
+++ b/RanchRodeo/RRRiderTableViewCell.xib
@@ -32,13 +32,22 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Icon-X" highlightedImage="Icon-Check" translatesAutoresizingMaskIntoConstraints="NO" id="wEX-bi-r6w">
+                        <rect key="frame" x="512" y="0.0" width="43" height="43"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="categoryLabel" destination="Myu-1R-ycX" id="peE-HY-fJb"/>
                 <outlet property="nameLabel" destination="nv8-eL-MXz" id="8Eu-bB-wMH"/>
                 <outlet property="numberOfRidesLabel" destination="lNH-z3-YIQ" id="wfn-Fl-M8x"/>
+                <outlet property="waiverSignedImageView" destination="wEX-bi-r6w" id="e5Z-Nf-jsr"/>
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Icon-Check" width="43" height="43"/>
+        <image name="Icon-X" width="43" height="43"/>
+    </resources>
 </document>
